--- a/MudBlazorTemplateSamples/MudBlazorTemplateSamples/wwwroot/index.html
+++ b/MudBlazorTemplateSamples/MudBlazorTemplateSamples/wwwroot/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/39143e8583.js" crossorigin="anonymous"></script>
+    <link href="bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="IllegibleMinified.css" rel="stylesheet" />
 </head>
 
 <body>
